--- a/css/estilo.css
+++ b/css/estilo.css
@@ -157,9 +157,15 @@ section .contentBx .formBx .inputBx input[type='submit']:hover{
         margin-bottom: 2rem;
 
     }
+
+    body{
+        font-size: smaller;
+    }
+
     section  h2{
        
-        margin-top: 2rem;
+        margin-top: 3px;
+        margin-bottom: 2px;
 
     }
 
@@ -184,7 +190,8 @@ section .contentBx .formBx .inputBx input[type='submit']:hover{
         width: 100%;
         height: 100%;
         z-index: 1;
-      
+        top: 0;
+       
         
 
     }
@@ -197,17 +204,27 @@ section .contentBx .formBx .inputBx input[type='submit']:hover{
         padding: 12px;
         background: rgb(255,255, 255  );
         opacity: 0.9;
+        top: 0;
     
     }
     
     section .contentBx .formBx .inputBx input{
         
         padding: 8px 16px;
+       
     }
   
 
     body{
         font-size: smaller;
+    }
+
+    
+    section  h2{
+       
+        margin-top: 3px;
+        margin-bottom: 2px;
+
     }
 }
 
