--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto',sans-serif;
+    font-weight: 600;
 }
 
 section{
@@ -11,6 +12,7 @@ section{
     width: 100%;
     height: 100vh;
     display: flex;
+   
 }
 
 section .imgBx{
@@ -50,15 +52,16 @@ section .contentBx{
     height: 100%;
     justify-content: center;
     align-items: center;
+    
 }
 
 section .contentBx .formBx{
     width: 50%;
 }
-section .contentBx .formBx h2{
+section .contentBx .formBx h1{
     color: dodgerblue;
-    font-weight: 600;
-    font-size: 1em;
+    font-weight: bolder;
+    font-size: 18px;
     text-transform:  uppercase;
     margin-bottom: 20px;
     border-bottom: 4px solid #FF7200;
@@ -74,11 +77,12 @@ section .contentBx .formBx .inputBx{
 
 section .contentBx .formBx .inputBx span{
     color: lightsalmon;
-    font-weight: 300;
+    font-weight: 600;
     font-size: 14px;
     margin-bottom: 5px;
     display:inline-block;
     letter-spacing: 1px;
+    
 }
 
 section .contentBx .formBx .inputBx input{
